# aaraminds-projects

./: .gitattributes  .gitignore
antr/: .gitignore  AGENT_ROSTER.md  BENCHMARK_vs_AVNM_Batfish.md  EXECUTION_PROMPT.md  EXECUTION_REPORT.md  IMPLEMENTATION_PLAYBOOK.md  INTERNAL_AUDIT.md  Makefile  README.md  adoption execution prompt.md  demo.sh
azure-network-topology-reviewer/: ADOPTION_ROADMAP.md  AGENT_ROSTER.md  COMPETITIVE_ANALYSIS.md  IMPLEMENTATION_PLAYBOOK_CLAUDE.md  NetworkTopologyReviewer-STATUS.md  NetworkTopologyReviewer-architecture.md  NetworkTopologyReviewer-engine-plan.md  README.md
azure-network-topology-reviewer/phase-1/explainer/: pyproject.toml
azure-network-topology-reviewer/phase-1/explainer/src/explainer/: __init__.py  app.py  llm.py  models.py  rag.py  stub.py
azure-network-topology-reviewer/phase-1/explainer/tests/: test_graph.py  test_integration.py
azure-network-topology-reviewer/phase-3/generator/: exceptions.py  intent.py  models.py  pyproject.toml
ba-agent/: .gitignore  Makefile  fleet_prompt.md  prompts.md  pyproject.toml
ba-agent/.github/: copilot-instructions.md
ba-agent/docs/architecture/: ba-agent-hld.md
ba-agent/docs/development/: g1-readiness.md  g2-readiness.md  g3-readiness.md  g4-readiness.md  g5-candidate-review.md  g6-authorization-package.md  g7-readiness-review.md  gts-p2-req-evaluation-approach.md  local-development.md  mcp-schema-validation-process.md  mcp-validation-register.json  p2-g1-technical-baseline.md  p2-g2-synthetic-thin-slice.md  p2-g3-evaluation-control-hardening.md  p2-g4-tool-data-readiness.md  p2-g5-candidate-review.md  phase-1-technical-baseline.md  phase-2-blocked-tool-data-artifact-backlog.md  phase-2-confluence-sandbox-evidence-package.md  phase-2-data-classification-plan.md  phase-2-git-sandbox-evidence-package.md  phase-2-hld-review-package.md  phase-2-jira-sandbox-evidence-package.md  phase-2-metric-threshold-posture.md  phase-2-prioritization-brief.md  phase-2-sandbox-authorization-package.md  phase-2-sandbox-dry-run-plan.md  phase-2-sandbox-dry-run-result-template.md  phase-2-sandbox-evidence-intake-template.md  phase-2-sandbox-owner-review-package.md  phase-2-synthetic-case-inventory.md  phase-2-synthetic-completion-package.md  phase-2-synthetic-maturation-package.md  phase-2-teams-sandbox-blocked-package.md  phase-2-tool-approval-matrix.md  pilot-execution-blocked.md  pilot-release-notes.md  pilot-runbook.md  read-only-sandbox-replacement.md  rollback-kill-switch-drill.md  (+3 more)
ba-agent/docs/planning/: decision-log.md  g0-readiness-package.md  phase-0-baseline-review.md  phase-2-hld-creation-plan.md  phase-2-implementation-plan.md  phase-2-traceability-matrix.md  project-development-plan.md  risk-open-question-triage.md
ba-agent/docs/requirements/: ba-requirements-prompt.md  ba_agent_evaluation_harness.md  ba_agent_mcp_tool_contracts.md  ba_agent_operations_model.md  ba_agent_runtime_architecture.md  business-analyst-agent-requirements.md
ba-agent/eval/: README.md
ba-agent/src/ba_agent/: __init__.py  __main__.py  adapters.py  cards.py  cli.py  config.py  constants.py  evaluation.py  fixtures.py  gateway.py  models.py  mvp.py  orchestrator.py  router.py  standup.py  validation.py
ba-agent/src/ba_agent/phase2/: __init__.py  context_memory.py  discovery.py  models.py  router.py  sandbox_mcp.py  traceability.py
ba-agent/tests/: conftest.py  test_cards.py  test_cli.py  test_config.py  test_evaluation.py  test_fixtures.py  test_gateway.py  test_imports.py  test_makefile_commands.py  test_models.py  test_mvp.py  test_no_network.py  test_router.py  test_standup.py  test_validation.py
ba-agent/tests/fixtures/: standup_cases.json
ba-agent/tests/phase2/: __init__.py  test_discovery.py  test_sandbox_mcp.py  test_separation.py  test_thin_slice.py
ba-agent/tests/phase2/fixtures/: P2REQ-001.json  P2REQ-002.json  P2REQ-003.json  P2REQ-004.json  P2REQ-005.json  P2REQ-006.json  P2REQ-007.json  P2REQ-008.json  P2REQ-STUB-001.json
cc-rif/: CODEOWNERS  README.md  clean.sh  rif_feedback.md  run.sh
cc-rif/services/agent-service/: Dockerfile  agents.py  app.py  config.py  mcp_client.py  models.py  narrator.py  pyproject.toml
cc-rif/services/agent-service/tests/: test_agents.py  test_e2e.py
cc-rif/services/embedding-service/: .env.example  README.md  app.py  batch_cli.py  batch_embed.py  pyproject.toml
cc-rif/services/embedding-service/tests/: conftest.py  test_embed_api.py  test_integration_model.py
clear-cortex/: Exec_Summary.md  README.md  Raja_Instructions.md  instructions_plan.md
code-intelligence-factory/: README.md
copilot-token-budget/: .gitignore  .goreleaser.yaml  BUILD_PLAN.md  IMPLEMENTATION_PLAYBOOK.md  LICENSE  PHASE-6.1-COMPLETION.md  PHASE-6.2-COMPLETION.md  README.md  STATUS.md  USAGE.md  analyze  go.work  install_vscode_extn.sh  liveUpdate.md  remove_vscode_extn.sh  usage_new.md
dif/: DECISIONS.md  DIF_BRD.md  DIF_PRD.md  action_plan.md  design-decisions.md  dif_brd.md  dif_prd.md  process_plan.md  prompts.md
emerging-companies-monitor/: .~lock.ValueEducator_Portfolios_Watchlist.xlsx#  .~lock.ValueEducator_Portfolios_Watchlist_v2.xlsx#  .~lock.ValueEducator_Portfolios_Watchlist_v3.xlsx#  .~lock.ValueEducator_Portfolios_Watchlist_v4.xlsx#  .~lock.ValueEducator_Portfolios_Watchlist_v5.xlsx#  .~lock.ValueEducator_Portfolios_Watchlist_v6.xlsx#  .~lock.ValueEducator_Portfolios_Watchlist_v7.xlsx#  .~lock.ValueEducator_Portfolios_Watchlist_v8.xlsx#  .~lock.ValueEducator_Portfolios_Watchlist_v9.xlsx#  PowerQuery_Live_Prices.md  README.md  ValueEducator_Portfolios_Watchlist.xlsx  ValueEducator_Portfolios_Watchlist_v2.xlsx  ValueEducator_Portfolios_Watchlist_v3.xlsx  ValueEducator_Portfolios_Watchlist_v4.xlsx  dashboard.html  (+9 more)
scrum-master/code/apps/orchestrator/: Dockerfile  README.md  pyproject.toml
scrum-master/code/apps/orchestrator/scrum_orchestrator/: __init__.py  audit.py  brief.py  config.py  gate.py  graph.py  main.py  mcp_client.py  ports.py  state.py  teams_client.py
scrum-master/code/apps/orchestrator/tests/: test_brief.py  test_doc_invariant.py  test_gate.py
(+1033 files in other folders)
