[project]
name = "rif-agent-service"
version = "0.1.0"
description = "Phase 4 LangGraph-style agent service for Repo Intelligence Factory"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "litellm>=1.74.0",
    "langgraph>=0.2.0",
    "pydantic-settings>=2.6.0",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["agents", "app", "config", "mcp_client", "models", "narrator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests requiring a live MCP server URL",
]
