[project]
name = "rif-embedding-service"
version = "0.1.0"
description = "Phase 2 embedding service for Repo Intelligence Factory"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "numpy>=1.26.0",
    "pgvector>=0.3.6",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.6.0",
    "sentence-transformers>=3.3.0",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
batch-embed = "batch_embed:main"
